fix dark mode button position

--- a/css/components/profile.css
+++ b/css/components/profile.css
@@ -12,7 +12,7 @@
     "quest quest quest"
     "book book book"
     "sett sett sett"
-    "tex tex button";
+    "tex tex butt";
 }
 
 .profile-pic {
@@ -97,6 +97,9 @@ div i {
   color: var(--violet);
 }
 
+.slider-container {
+  grid-area: butt;
+}
 /* slider reference: https://www.w3schools.com/howto/howto_css_switch.asp */
 /* The switch - the box around the slider */
 .switch {
@@ -104,7 +107,6 @@ div i {
   display: inline-block;
   width: 60px;
   height: 34px;
-  /* grid-area: button; */
 }
 
 /* Hide default HTML checkbox */
